--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@fontsource/lato": "^4.5.1",
     "next": "12.0.10",
+    "next-safe": "^3.2.1",
+    "preact": "^10.6.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-tsparticles": "^1.40.0"
